--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/cmccormack/url-shortener-service#readme",
   "dependencies": {
     "consolidate": "^0.14.5",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "mongodb": "^2.2.33"
   },
